# RPLM.ShowCurves

./: README.md
Examples/: Пример сборки.docx
Examples/1 Кривая Безье 2 степени/: SourceCurves.txt
Examples/13 кривых Безье 5 степени/: ControlPoints.txt  Knots.txt  SourceCurve.txt
Examples/2 Кривые Безье 5 степени/: SourceCurves.txt
Examples/4 Кривые Безье 2-й, 3-й, 5-й, 6-й степени/: SourceCurves.txt
Examples/4 Кривые Безье 2-й, 4-й, 6-й, 12-й степени/: SourceCurves.txt
Examples/5 Кривых Безье 1-й, 3-й, 7-й, 10-й, 20-й степени/: SourceCurves.txt
RPLM.ShowCurves/: CMakeLists.txt  make_vs17_x64.cmd  make_vs19_x64.cmd  make_vs22_x64.cmd  make_vs26_x64.cmd
RPLM.ShowCurves/src/: CMakeLists.txt  Precompiled.h
RPLM.ShowCurves/src/Include/: RPLM.CAD.ConjugationMethod.h  RPLM.CAD.CurveParser.h  RPLM.CAD.EigenMatrixOperations.h  RPLM.CAD.IMatrixOperations.h  RPLM.CAD.NURBSUtils.h  RPLM.CAD.UI.ConjugationCurves.Resources.h  RPLM.CAD.UI.ShowCurves.Command.h  RPLM.CAD.UI.ShowCurves.Session.h  RPLM.CAD.UI.СonjugationCurves.Command.h
RPLM.ShowCurves/src/Resources/: RPLM.CAD.ConjugationCurves.resx  RPLM.CAD.ShowCurves.resx
RPLM.ShowCurves/src/Source/: RPLM.CAD.ConjugationMethod.cpp  RPLM.CAD.CurveParser.cpp  RPLM.CAD.EigenMatrixOperations.cpp  RPLM.CAD.IMatrixOperations.cpp  RPLM.CAD.NURBSUtils.cpp  RPLM.CAD.UI.ConjugationCurves.Resources.cpp  RPLM.CAD.UI.ConjugationCurves.Session.cpp  RPLM.CAD.UI.ShowCurves.Command.cpp  RPLM.CAD.UI.ShowCurves.Resources.cpp  RPLM.CAD.UI.ShowCurves.Session.cpp  RPLM.CAD.UI.СonjugationCurves.Command.cpp
