cmake_minimum_required(VERSION 3.16.0)

SET(PROJECT_NAME RPLM.CAD.ConjugationCurves)

file(GLOB_RECURSE HEADER_FILES Include/*.h)
file(GLOB_RECURSE SOURCE_FILES Source/*.cpp Source/*.h)
file(GLOB_RECURSE RESOURCE_FILES Resources/*.resx)

list(APPEND SOURCE_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/Precompiled.h 
	${CMAKE_CURRENT_SOURCE_DIR}/Precompiled.cpp)
	
if(RPLM_FOLDER_GROUP)
	GENERATE_FOLDER_SG("${HEADER_FILES}" ${CMAKE_CURRENT_SOURCE_DIR}/Include/Model Include/)
	GENERATE_FOLDER_SG("${SOURCE_FILES}" ${CMAKE_CURRENT_SOURCE_DIR}/Source Source/)
	GENERATE_FOLDER_SG("${PRECOMPILED_FILES}" ${CMAKE_CURRENT_SOURCE_DIR} Source/)
endif()

find_package(Qt5Core QUIET)
find_package(Qt5Gui QUIET)
find_package(Qt5Widgets QUIET)

set(CMAKE_AUTOMOC ON)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PRECOMPILED_FILES} ${RESOURCE_FILES})

target_compile_definitions(${PROJECT_NAME}
	PRIVATE
		RPLM_CAM_WIDGETS_EXPORTS
		_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS
)

if(MSVC)
	set_target_properties(Qt5::Core PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO "Debug")
	set_target_properties(Qt5::Widgets PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO "Debug")
	set_target_properties(Qt5::Gui PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO "Debug")
	set_target_properties(Qt5::WinMain PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO "Debug")
endif()

message(STATUS "------------------" ${RPLM_INCLUDE_DIR})

target_include_directories(${PROJECT_NAME} 
	PUBLIC
		Include
		${RPLM_INCLUDE_DIR}
		${RPLM_INCLUDE_DIR}/FPlatform
        ${RPLM_INCLUDE_DIR}/RPLM.Common
        ${RPLM_INCLUDE_DIR}/RPLM.Common/RPLM.Shell.UI
        ${RPLM_INCLUDE_DIR}/RPLM.Common/RPLM.UI.Widgets
        ${RPLM_INCLUDE_DIR}/RPLM.Common/RPLM.Base.Framework
        ${RPLM_INCLUDE_DIR}/RPLM.Common/RPLM.Utils.XML
        ${RPLM_INCLUDE_DIR}/RPLM.Common/RPLM.Utils.OS
        ${RPLM_INCLUDE_DIR}/RPLM.GeomCore
        ${RPLM_INCLUDE_DIR}/RPLM.GeomCore/RPLM.Math.ConstraintSolver3D
        ${RPLM_INCLUDE_DIR}/RPLM.GeomCore/RPLM.Math.Kernel3D
        ${RPLM_INCLUDE_DIR}/RPLM.GeomCore/RPLM.Math.Geometry2D
        ${RPLM_INCLUDE_DIR}/RPLM.GeomCore/RPLM.Math.Voxel
        ${RPLM_INCLUDE_DIR}/RPLM.EP
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Common
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Graphics
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Mesh
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Mesh/Interface
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Model
        ${RPLM_INCLUDE_DIR}/RPLM.EP.Widgets
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.Model/Model
        ${RPLM_INCLUDE_DIR}/RPLM.EP/RPLM.EP.UI	
	PRIVATE 
		${CMAKE_CURRENT_SOURCE_DIR}
		Source 
		${CMAKE_CURRENT_SOURCE_DIR}/Include
)

find_package(RPLM
    COMPONENTS
	Kernel3D
	Geometry2D
	EPCommon
	EPModel
	ShellUI
	EPUI
	EPGraphics
	EPWidgets
	UIWidgets
	BaseFramework
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
	${CMAKE_DL_LIBS} 
#	${RPLM_LIB_KERNEL3D}
#	${RPLM_LIB_GEOMETRY2D}
#	${RPLM_LIB_EP_COMMON}
#	${RPLM_LIB_EP_MODEL}	
#	${RPLM_LIB_SHELL_UI}
#	${RPLM_LIB_EP_UI}
#	${RPLM_LIB_UI_WIDGETS}
#	${RPLM_LIB_EP_WIDGETS}
#	${RPLM_LIB_EP_GRAPHICS}
#	${RPLM_LIB_BASE_FRAMEWORK}
	RPLM::Kernel3D
	RPLM::Geometry2D
	RPLM::EPCommon
	RPLM::EPModel
	RPLM::ShellUI
	RPLM::EPUI
	RPLM::EPGraphics
	RPLM::EPWidgets
	RPLM::UIWidgets
	RPLM::BaseFramework
	Qt5::Core
	Qt5::Widgets
	Qt5::Gui
)

IF (USE_PCH)
	ADD_PRECOMPILED_HEADER(${PROJECT_NAME} Precompiled.h FORCEINCLUDE)
ENDIF()

#IF (MSVC)
#	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/Zm200")
#ENDIF()

## COPY RESOURCES
ADD_COPY_DEV_RESOURCES_COMMANDS(${PROJECT_NAME})
## INSTALL
RPLM_INSTALL_CORE(TARGET ${PROJECT_NAME} POSTFIX_INCLUDE ${PROJECT_NAME})
